# Melter

./: .gitignore  .gitmodules  .mailmap  Melter.py  README.md  __init__.py  devenv.nix  pyproject.toml  setup.py
Common/: MTPy_Modified.py  __init__.py  threading_decorators.py
Data/: Calibration.py  ThresholdFunctions.py
Main/: Main_Desktop.py  __init__.py
Templates/: console_output.py  dropdown_button.py  file_chooser_popup.kv  input_output_chooser.kv  input_output_chooser.py  melter_desktop.kv  melter_desktop_backup.kv
melter/: __main__.py  gui.py
spec/: Melter-Desktop.spec
tests/: test_melter.py
