[tool.poetry]
name = "Melter"
version = "0.1.0"
description = "A GUI over the MTPy module"
authors = ["Cian Hughes <cian.hughes@dcu.ie>"]

[tool.poetry.dependencies]
python = "3.9.10"
Kivy = "^2.0.0"
numpy = "^1.22.2"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
plotly = "^5.5.0"
scipy = "^1.8.0"
tqdm = "^4.62.3"
pyinstaller = "^4.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
