[tool.poetry]
name = "melter"
version = "0.1.0"
description = "A GUI wrapper around MTPy"
authors = ["Cian Hughes <chughes000@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "melter", from = "." }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mtpy = {git = "https://github.com/Cian-H/MTPy"}
flet = "0.19.0" # "^0.24.1"
dask-expr = "^1.1.16"
panel = "^1.5.3"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = -1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
